Use more efficient Long cache: Use "Long.valueOf(int)" instead of "new Long(long)"
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/lang/trunk@1153487 13f79535-47bb-0310-9956-ffa450edef68